<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/thumbnail" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_profile_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/me"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/card_profile"
            app:layout_constraintEnd_toStartOf="@id/img_setting"
            app:layout_constraintStart_toEndOf="@id/card_profile"
            app:layout_constraintTop_toTopOf="@id/card_profile" />

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="30dp"
            android:layout_height="00dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_profile_name"
            app:layout_constraintBottom_toBottomOf="@id/txt_profile_name"
            app:layout_constraintTop_toTopOf="@id/txt_profile_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:id="@+id/img_smart_watch"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_smart_watch"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_smart_watch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:text="@string/dummy_smart_watch"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/img_smart_watch"
                        app:layout_constraintEnd_toStartOf="@id/img_bluetooth"
                        app:layout_constraintStart_toEndOf="@id/img_smart_watch"
                        app:layout_constraintTop_toTopOf="@id/img_smart_watch" />

                    <ImageView
                        android:id="@+id/img_arrow"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_arrow"
                        app:layout_constraintBottom_toBottomOf="@id/img_smart_watch"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/img_smart_watch" />

                    <ImageView
                        android:id="@+id/img_bluetooth"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_bluetooth"
                        app:layout_constraintBottom_toBottomOf="@id/img_smart_watch"
                        app:layout_constraintEnd_toStartOf="@id/img_arrow"
                        app:layout_constraintTop_toTopOf="@id/img_smart_watch" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_add_device"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/background_button"
                        android:text="@string/add_new_device"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="@id/img_arrow"
                        app:layout_constraintStart_toStartOf="@id/img_smart_watch"
                        app:layout_constraintTop_toBottomOf="@id/img_smart_watch" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_donut_statistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/card_header"
                app:layout_constraintStart_toStartOf="@id/card_header"
                app:layout_constraintTop_toBottomOf="@id/card_header">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_title_statistic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:text="@string/title_statistic"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/donut_chart"
                        android:layout_width="0dp"
                        android:layout_height="160dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/txt_title_statistic"
                        app:layout_constraintTop_toBottomOf="@id/txt_title_statistic" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_line_statistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/card_donut_statistic"
                app:layout_constraintStart_toStartOf="@id/card_donut_statistic"
                app:layout_constraintTop_toBottomOf="@id/card_donut_statistic">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_title_line_statistic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:text="@string/title_line_statistic"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/line_chart"
                        android:layout_width="0dp"
                        android:layout_height="160dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/txt_title_line_statistic"
                        app:layout_constraintTop_toBottomOf="@id/txt_title_line_statistic" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="@id/card_line_statistic"
                app:layout_constraintEnd_toEndOf="@id/card_line_statistic"
                app:layout_constraintTop_toBottomOf="@id/card_line_statistic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>